# bc19

./: .gitmodules  README.md
bots/: .gitignore  battlecode.js  compiled_bot.js  upload.sh
bots/cpp_poc/: my_lib.cpp  robot.js  runner.js  wasm_to_base64.py
bots/cpp_poc/compile/: compile.sh
bots/cpp_poc/cpp/: compile.sh
bots/cpp_starter/: robot.js
bots/cpp_starter/cpp/: AttackerRobot.cpp  AttackerRobot.h  CMakeLists.txt  CastleRobot.cpp  CastleRobot.h  CastleTalker.h  CommonRobot.h  Coordinate.h  DeterministicResourceClusterer.cpp  DeterministicResourceClusterer.h  Grid.h  MapSymmetry.h  OffensiveAttack.cpp  OffensiveAttack.h  Pathfinder.cpp  Pathfinder.h  PilgrimRobot.cpp  PilgrimRobot.h  UnitCounts.h  compile.sh  cpp_starter.cpp  cpp_starter.h  fast_rand.h  my_robot.cpp  wasm2js.js
bots/dk_js/: robot.js
bots/noop/: robot.js
bots/starter_copy/: battlecode.js  specs.json
bots/vm_timeout_bug_bot/: robot.js
